--- a/Views/Signin/loginForm.cshtml
+++ b/Views/Signin/loginForm.cshtml
@@ -17,7 +17,7 @@
         <span class="text-danger small" asp-validation-for="Password"></span>
     </div>
     <div class="form-group">
-        <a class="text-info" asp-controller="Signin" asp-action="ForgotPasswordForm">Forgot Password</a><br />
+        <a class="text-info" asp-controller="ResetPassword" asp-action="CheckEmailForm">Forgot Password</a><br />
         <a class="text-info" asp-controller="Signup" asp-action="SignupForm">Not a member already? Sign up!</a>
     </div>
     <div class="text-center">
