--- a/Views/ResetPassword/SecurityQuestionForm.cshtml
+++ b/Views/ResetPassword/SecurityQuestionForm.cshtml
@@ -4,16 +4,15 @@
     Layout = "_formLayout";
 }
 
+<div class="display-4 text-center">Reset Password</div>
 <form asp-action="SecurityQuestionForm" method="post" class="form-block border bg-grey">
-
     <div class="mb-3 text-center lead">@Model</div>
-
     <div class="form-group">
         <div class="input-group">
             <div class="input-group-prepend">
                 <span class="input-group-text">Answer</span>
             </div>
-            <input class="form-control" name="_answer" placeholder="Your Answer" />
+            <input class="form-control" type="text" name="_answer" placeholder="Your Answer" />
         </div>
         @if (ViewBag.ErrorMessage != null)
         {
