--- a/Views/Order/index.cshtml
+++ b/Views/Order/index.cshtml
@@ -10,7 +10,7 @@
         padding-top: 1vh
     }
 </style>
-<div style="text-align: center;" class="container border bg-grey">
+<div style="text-align: center;" class="form-block border bg-grey">
         <div class="form-group">
             <h1>Order Form</h1>
         </div>
