--- a/Views/Order/index.cshtml
+++ b/Views/Order/index.cshtml
@@ -53,6 +53,9 @@
 
                 </select>
             </div>
+            <div class="form-group">
+                <input type="hidden" value="1" id="userId" name="userId"/>
+            </div>
             <button type="submit" class="btn btn-primary btn-lg">Submit Order</button>
         </form>
     </div>
