--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
             {
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Logout" asp-action="SignupForm">Logout</a>
+                        <a class="nav-link" asp-controller="Signin" asp-action="Logout">Logout</a>
                     </li>
                 </ul>
             }
