--- a/Views/Receipt/AllReceipts.cshtml
+++ b/Views/Receipt/AllReceipts.cshtml
@@ -8,12 +8,12 @@
     Receipts
 </h2>
 
-<div style="text-align: left;" class="form-block border bg-grey">
+<div style="text-align: left;" class="container form-block border bg-grey">
     
     @foreach (var receipt in Model)
     {
         <p>Order ID: @receipt.Id | Product: @receipt.Item | Amount: @receipt.Quantity | Price: @receipt.Total.ToString("C") 
-            | Date Purchased: @receipt.Date| Delivered: @receipt.ReceiveDate | @receipt.User.FirstName</p>
+            | Date Purchased: @receipt.Date.ToString("yy-MMM-dd ddd") | Delivered: @receipt.ReceiveDate.ToString("yy-MMM-dd ddd") | @receipt.User.FirstName @receipt.User.LastName | User ID: @receipt.User.Id</p>
 
     }
 </div>
