--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                     <a class="nav-link" asp-controller="Order" asp-action="Index">Order</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Receipt" asp-action="Index">Receipt</a>
+                    <a class="nav-link" asp-controller="Receipt" asp-action="UserReceipts">Receipt</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" asp-controller="Stats" asp-action="DefaultGraph">Stats</a>
