--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/main.css?id=1234" />
     <link rel="stylesheet" href="/lib/twitter-bootstrap/css/bootstrap.css">
     <script src="/lib/twitter-bootstrap/js/bootstrap.js"></script>
+    <script src="https://kit.fontawesome.com/95c8f7aee3.js"></script>
 
     @RenderSection("head", required: false)
 </head>
@@ -29,7 +30,7 @@
                     <a class="nav-link" asp-controller="Order" asp-action="Index">Order</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Receipt" asp-action="Index">Receipt</a>
+                    <a class="nav-link" asp-controller="Receipt" asp-action="UserReceipts">Receipt</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" asp-controller="Stats" asp-action="DefaultGraph">Stats</a>
