Added custom date-picker. Updated SignupForm. Unique emails per account now supported.

--- a/Views/Signup/signupForm.cshtml
+++ b/Views/Signup/signupForm.cshtml
@@ -6,23 +6,42 @@
 
 <form asp-action="SignupForm" method="post" class="form-block border bg-grey">
     <div class="display-4 text-center">Sign Up</div>
-    <div class="vpad-sm"></div>
+    <p class="lead text-center mt-2">Get member access with free registration!</p>
     <div class="row">
         <div class="col">
+            <div class="form-group">
+                <label asp-for="FirstName"></label>
+                <input class="form-control" type="text" asp-for="FirstName" placeholder="First Name" />
+                <span class="text-danger small" asp-validation-for="FirstName"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Email">Email</label>
                 <input class="form-control" type="email" asp-for="Email" placeholder="Email Address" />
                 <span class="text-danger small" asp-validation-for="Email"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ConfirmEmail"></label>
-                <input class="form-control" type="email" asp-for="ConfirmEmail" placeholder="Confirm Email Address" />
-                <span class="text-danger small" asp-validation-for="ConfirmEmail"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Password"></label>
                 <input class="form-control" type="password" asp-for="Password" placeholder="Password" />
                 <span class="text-danger small" asp-validation-for="Password"></span>
+            </div>
+
+        </div>
+        <div class="col">
+            <div class="form-group">
+                <label asp-for="LastName"></label>
+                <input class="form-control" type="text" asp-for="LastName" placeholder="Last Name" />
+                <span class="text-danger small" asp-validation-for="LastName"></span>
+            </div>
+            <div class="form-group">
+                <label>Date of Birth</label> <br />
+                <div class="btn-group bg-white rounded d-flex">
+                    <select id="dobmonth" class="btn" asp-for="MonthOfBirth" asp-items="BirthdayDateSelect.Months">
+                    </select>
+                    <select id="dobday" class="btn dropdown" asp-for="DayOfBirth" asp-items="BirthdayDateSelect.Days">
+                    </select>
+                    <select id="dobyear" class="btn" asp-for="YearOfBirth" asp-items="BirthdayDateSelect.Years">
+                    </select>
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="ConfirmPassword"></label>
@@ -30,47 +49,37 @@
                 <span class="text-danger small" asp-validation-for="ConfirmPassword"></span>
             </div>
         </div>
+    </div>
+    <div class="row">
         <div class="col">
             <div class="form-group">
-                <label asp-for="SecurityQuestoin"></label>
-                <select class="form-control" type="text" asp-for="SecurityQuestoin" asp-items="new SelectList(Credentials.SecurityQuestions)">
-                </select>
-                <span class="text-danger small" asp-validation-for="SecurityQuestoin"></span>
+                <label asp-for="Address"></label>
+                <input class="form-control" type="text" asp-for="Address" placeholder="Address" />
+                <span class="text-danger small" asp-validation-for="Address"></span>
             </div>
+        </div>
+        <div class="col">
             <div class="form-group">
-                <label asp-for="SecurityAnswer"></label>
-                <input class="form-control" type="text" asp-for="SecurityAnswer" placeholder="Security Answer" />
-                <span class="text-danger small" asp-validation-for="SecurityAnswer"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FirstName"></label>
-                <input class="form-control" type="text" asp-for="FirstName" placeholder="First Name" />
-                <span class="text-danger small" asp-validation-for="FirstName"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastName"></label>
-                <input class="form-control" type="text" asp-for="LastName" placeholder="Last Name" />
-                <span class="text-danger small" asp-validation-for="LastName"></span>
+                <label asp-for="CreditCardNumber"></label>
+                <input class="form-control" type="text" asp-for="CreditCardNumber" placeholder="XXXX-XXXX-XXXX-XXXX" />
+                <span class="text-danger small" asp-validation-for="CreditCardNumber"></span>
             </div>
         </div>
     </div>
     <div class="form-group">
-        <label asp-for="Address"></label>
-        <input class="form-control" type="text" asp-for="Address" placeholder="Address" />
-        <span class="text-danger small" asp-validation-for="Address"></span>
+        <label asp-for="SecurityQuestoin"></label>
+        <select class="form-control" type="text" asp-for="SecurityQuestoin" asp-items="new SelectList(Credentials.SecurityQuestions)">
+        </select>
+        <span class="text-danger small" asp-validation-for="SecurityQuestoin"></span>
     </div>
     <div class="form-group">
-        <label asp-for="CreditCardNumber"></label>
-        <input class="form-control" type="text" asp-for="CreditCardNumber" placeholder="XXXX-XXXX-XXXX-XXXX" />
-        <span class="text-danger small" asp-validation-for="CreditCardNumber"></span>
+        <label asp-for="SecurityAnswer"></label>
+        <input class="form-control" type="text" asp-for="SecurityAnswer" placeholder="Security Answer" />
+        <span class="text-danger small" asp-validation-for="SecurityAnswer"></span>
     </div>
-    <div class="form-group">
-        <label asp-for="DateOfBirth"></label>
-        <input class="form-control" type="date" asp-for="DateOfBirth" placeholder="Date of Birth" />
-        <span class="text-danger small" asp-validation-for="DateOfBirth"></span>
-    </div>
+
     <div class="text-center">
-        <button class="btn btn-info btn-block" type="submit">Sign Up</button>
+        <button class="btn btn-info btn-block btn-lg" type="submit">Sign Up</button>
     </div>
 
 
