--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/main.css?id=1234" />
     <link rel="stylesheet" href="/lib/twitter-bootstrap/css/bootstrap.css">
     <script src="/lib/twitter-bootstrap/js/bootstrap.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/95c8f7aee3.js"></script>
 
     @RenderSection("head", required: false)
