--- a/Views/Shared/_formLayout.cshtml
+++ b/Views/Shared/_formLayout.cshtml
@@ -3,10 +3,14 @@
     Layout = "_Layout";
 }
 
+@section head {
+    @RenderSection("head", required: false)
+}
+
 <div class="container">
     <div class="row">
         <div class="col"></div>
-        <div class="col-sm-12 col-md-8 col-lg-7">
+        <div class="col-sm-12 col-md-7 col-lg-8">
             <div class="vpad"></div>
 
             <div>
