--- a/Views/Stats/index.cshtml
+++ b/Views/Stats/index.cshtml
@@ -70,8 +70,8 @@
                             @{ List<Item> items = ViewBag.Items;}
                             @for (int i = 0; i < items.Count; i++)
                             {
-                                <input class="form-check-input" type="checkbox" asp-for="ChosenItems" value="@items[i].Id" id="Item @items[i].Id">
-                                <label class="form-check-label" asp-for="ChosenItems">
+                                <input class="form-check-input" type="checkbox" asp-for="ChosenItems[i]" value="true" id="Item @items[i].Id">
+                                <label class="form-check-label" asp-for="ChosenItems[i]">
                                     @items[i].ProductName
                                 </label>
                             }
