Created an If Statement for Date Delivered

--- a/Views/Receipt/AllReceipts.cshtml
+++ b/Views/Receipt/AllReceipts.cshtml
@@ -12,10 +12,22 @@
 
     @foreach (var receipt in Model)
     {
-        <p>
-            Order ID: @receipt.Id | Product: @receipt.Item.ProductName | Amount: @receipt.Quantity | Price: @receipt.Total.ToString("C")
-            | Date Purchased: @receipt.Date.ToString("yy-MMM-dd ddd") | Delivered: @receipt.ReceiveDate.ToString("yy-MMM-dd ddd") | @receipt.User.FirstName @receipt.User.LastName | User ID: @receipt.User.Id
-        </p>
+    <p>
+        Order ID: @receipt.Id | Product: @receipt.Item.ProductName | Amount: @receipt.Quantity | Price: @receipt.Total.ToString("C")
+        | Date Purchased: @receipt.Date.ToString("yy-MMM-dd ddd") | 
 
-    }
+        @if (receipt.ReceiveDate > DateTime.Now)
+        {
+            <span>Expected Delivery Date: </span>
+        }
+        else
+        {
+            <span>Date Delivered: </span>
+        }
+        @receipt.ReceiveDate.ToString("yy-MMM-dd ddd") |
+
+        @receipt.User.FirstName @receipt.User.LastName | User ID: @receipt.User.Id
+    </p>
+
+}
 </div>
