Removed HomeController. Stats Order and Receipt pages now require login to access.

--- a/Views/Signup/signupForm.cshtml
+++ b/Views/Signup/signupForm.cshtml
@@ -35,11 +35,11 @@
             <div class="form-group">
                 <label>Date of Birth</label> <br />
                 <div class="btn-group bg-white rounded d-flex">
-                    <select id="dobmonth" class="btn" asp-for="MonthOfBirth" asp-items="BirthdayDateSelect.Months">
+                    <select id="dobmonth" class="btn" asp-for="MonthOfBirth" asp-items="DateSelect.Months">
                     </select>
-                    <select id="dobday" class="btn dropdown" asp-for="DayOfBirth" asp-items="BirthdayDateSelect.Days">
+                    <select id="dobday" class="btn dropdown" asp-for="DayOfBirth" asp-items="DateSelect.Days">
                     </select>
-                    <select id="dobyear" class="btn" asp-for="YearOfBirth" asp-items="BirthdayDateSelect.Years">
+                    <select id="dobyear" class="btn" asp-for="YearOfBirth" asp-items="DateSelect.Years">
                     </select>
                 </div>
             </div>
