--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,31 +15,25 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-grey">
+        <a class="navbar-brand" asp-controller="Stats" asp-action="Index">Financial Enterprise Genie</a>
 
-        <a class="navbar-brand" asp-controller="Home" asp-action="Index">Financial Enterprise Genie</a>
-        
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" asp-controller="Home" asp-action="Index">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Order" asp-action="Index">Order</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Receipt" asp-action="UserReceipts">Receipt</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Stats" asp-action="Index">Stats</a>
-                </li>
-            </ul>
+
 
             @if (CookieUtil.GetCookie(Context.Request, CookieUtil.USER_ID_KEY) != null)
-            {
+            {<ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Order" asp-action="Index">Order</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Receipt" asp-action="UserReceipts">Receipt</a>
+                    </li>
+                </ul>
+
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Signin" asp-action="Logout">Logout</a>
