Added a Header Comment to Everyview Created by Clarksoc

--- a/Views/Order/Confirmation.cshtml
+++ b/Views/Order/Confirmation.cshtml
@@ -1,4 +1,8 @@
-﻿@using System.Net.NetworkInformation
+﻿<!--
+Principle Author: Connor Clarkson
+This is the confirmation view for when the user submits an order and this will display all the information for that order
+-->
+@using System.Net.NetworkInformation
 @model FinancialEnterpriseGenie.Models.Receipt
 @{
     ViewData["Title"] = "Receipt";
@@ -6,12 +10,13 @@
 }
 <style>
     .test {
-
         padding-bottom: 2vh
     }
+
     h1 {
         padding-top: 1vh
     }
+
     h2 {
         padding-bottom: 2vh
     }
