--- a/Views/Stats/index.cshtml
+++ b/Views/Stats/index.cshtml
@@ -50,79 +50,79 @@
     </script>
 }
 
-<div class="row m-3">
-    <div class="col-4">
-        <div class="form-block bg-grey">
+<div class="row m-3" style="height: 90vh">
+    <div class="col-lg-12 col-xl-4 d-flex">
+        <div class="form-block bg-grey h-100">
             <div class="display-4">@ViewBag.Graph.name</div>
-
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dui eros, placerat nec pretium quis,
-            imperdiet at lectus. Etiam lacinia sagittis elit, eget accumsan arcu facilisis vitae. Donec maximus mauris
-            id tincidunt convallis. Maecenas ut sollicitudin nibh, nec porttitor est. Integer vitae sapien suscipit, iaculis arcu sed,
-            aliquet massa. Sed ut rutrum erat, nec ultrices mauris. Vestibulum at ex sollicitudin, dignissim dolor a, tempus libero.
-
             <div class="vpad-sm"></div>
-            <form asp-action="Index" method="post">
+            <form asp-action="Index" method="post" class="form-block bg-info text-light">
+                <label asp-for="Type">Graph Type</label>
+                <span class="text-danger small" asp-validation-for="Type"></span>
+                <select id="Type" asp-for="Type" class="form-control">
+                    @{ string[] graphTypeList = ViewBag.GraphTypeList;}
+                    @for (int i = 0; i < graphTypeList.Length; i++)
+                    {
+                        @if (i == 0)
+                        {
+                            <option selected>@graphTypeList[i]</option>
+                        }
+                        else
+                        {
+                            <option>@graphTypeList[i]</option>
+                        }
+                    }
+                </select>
+                <div class="form-group">
+                    <label asp-for="NumWeeks">DataPoint Size</label>
+                    <span class="text-danger small" asp-validation-for="NumWeeks"></span>
+                    <input type="number" asp-for="NumWeeks" class="form-control" id="NumWeeks" placeholder="Number of Weeks Per DataPoint > 0">
+                </div>
                 <div class="row">
                     <div class="col">
-                        <div class="form-block bg-info text-light h-100">
-                            <div class="lead text-light">Select Elements To Display</div>
-                            <span class="text-danger small" asp-validation-for="ChosenItems"></span>
-                            @{ List<Item> items = ViewBag.Items;}
-                            @for (int i = 0; i < items.Count; i++)
-                            {
-                                <input class="form-check-input" type="checkbox" asp-for="ChosenItems[i]" value="true" id="Item @items[i].Id">
-                                <label class="form-check-label" asp-for="ChosenItems[i]">
-                                    @items[i].ProductName
-                                </label>
-                            }
-                            <div class="vpad-sm"></div>
-                            <button type="submit" class="btn btn-warning form-block text-dark">
-                                Generate Graph
-                            </button>
-                        </div>
+                        <div class="lead">Select elements to display</div>
+                        @{ List<Item> items = ViewBag.Items;}
+                        @for (int i = 0; i < items.Count; i++)
+                        {
+                            <div class="custom-control custom-checkbox">
+                                <input class="custom-control-input" type="checkbox" asp-for="ChosenItems[i]" value="true" id="Item @items[i].Id">
+                                <label class="custom-control-label" for="Item @items[i].Id">@items[i].ProductName</label>
+                            </div>
+                        }
                     </div>
                     <div class="col">
-                        <div class="form-block bg-info text-light">
-                            <div class="lead text-light">Select Graph Information</div>
-                            <div class="form-group">
-                                <label asp-for="Type">Graph Type</label>
-                                <span class="text-danger small" asp-validation-for="Type"></span>
-                                <select id="Type" asp-for="Type" class="form-control">
-                                    @{ string[] graphTypeList = ViewBag.GraphTypeList;}
-                                    @for (int i = 0; i < graphTypeList.Length; i++)
-                                    {
-                                        @if (i == 0)
-                                        {
-                                            <option selected>@graphTypeList[i]</option>
-                                        }
-                                        else
-                                        {
-                                            <option>@graphTypeList[i]</option>
-                                        }
-                                    }
+
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="lead">Time Span</div>
+                    <div class="row">
+                        <div class="col-6">
+                            <label>Min Date</label> <br />
+                            <div class="btn-group bg-white rounded">
+                                <select class="btn d-flex" asp-for="MinDay" asp-items="DateSelect.Days">
+                                </select>
+                                <select class="btn d-flex" asp-for="MinMonth" asp-items="DateSelect.Months">
+                                </select>
+                                <select class="btn d-flex" asp-for="MinYear" asp-items="DateSelect.Years">
                                 </select>
                             </div>
-                            <div class="form-group">
-                                <label asp-for="NumWeeks">DataPoint Size</label>
-                                <span class="text-danger small" asp-validation-for="NumWeeks"></span>
-                                <input type="number" asp-for="NumWeeks" class="form-control" id="NumWeeks" placeholder="Number of Weeks Per DataPoint > 0">
-                            </div>
                         </div>
-                        <br />
-                        <div class="form-block bg-warning text-dark row">
-                            <div class="lead">Time Span</div>
-                            <div class="form-group col">
-                                <label asp-for="MinDate"></label>
-                                <span class="text-danger small" asp-validation-for="MinDate"></span>
-                                <input class="form-control" type="date" asp-for="MinDate" placeholder="From Date" />
-                            </div>
-                            <div class="form-group col">
-                                <label for="MaxDate"></label>
-                                <span class="text-danger small" asp-validation-for="MaxDate"></span>
-                                <input class="form-control" type="date" asp-for="MaxDate" placeholder="To Date" />
+                        <div class="col">
+                            <label>Max Date</label> <br />
+                            <div class="btn-group bg-white rounded">
+                                <select class="btn dropdown" asp-for="MaxDay" asp-items="DateSelect.Days">
+                                </select>
+                                <select class="btn" asp-for="MaxMonth" asp-items="DateSelect.Months">
+                                </select>
+                                <select class="btn" asp-for="MaxYear" asp-items="DateSelect.Years">
+                                </select>
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <div class="form-group">
+                    <button type="submit" class="btn btn-warning btn-block text-dark">Generate Graph</button>
                 </div>
             </form>
         </div>
